--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,9 @@
       "@client/*": [
         "./src/client/*"
       ],
+      "@server/*": [
+        "./src/server/*"
+      ],
     }
   },
   "include": [
