--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,9 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 9
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -63,6 +63,12 @@ jobs:
           fi
           
           echo "$commits" | while read -r commit; do
+            # Skip merge commits (they don't follow conventional format)
+            if echo "$commit" | grep -qE '^Merge '; then
+              echo "⏭️  Skipping merge commit: $commit"
+              continue
+            fi
+            
             if echo "$commit" | grep -qE '^(feat|fix|chore|docs|refactor|test|style|perf)(\(.+\))?: .+'; then
               echo "✅ Valid: $commit"
             else
