--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ jobs:
     name: Code Quality & Build
     runs-on: ubuntu-latest
     
+    env:
+      SKIP_ENV_VALIDATION: true
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
