build(deps): install tanstack form and devtools

--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@tanstack/react-devtools": "^0.8.4",
+    "@tanstack/react-form": "^1.27.3",
+    "@tanstack/react-form-devtools": "^0.2.6",
+    "better-auth": "^1.4.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
