chore(core): setup env validation and shared error/db helpers

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,15 @@ DATABASE_URL="postgresql://donamed:password@localhost:5432/DONAMED-DB"
 # Flags for Drizzle operations
 DB_MIGRATING="false"
 DB_SEEDING="false"
+
+# -----------------------------------------------------------------------------
+# Authentication (BETTER-AUTH)
+# -----------------------------------------------------------------------------
+# 🔐 CRITICAL: Generate a secure string using `openssl rand -base64 32`
+BETTER_AUTH_SECRET=""
+
+# Google OAuth 2.0 Credentials
+# Get these from: https://console.cloud.google.com/apis/credentials
+# Ensure redirect URI matches: ${NEXT_PUBLIC_APP_URL}/api/auth/callback/google
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
