chore(env): add imagekit keys to validation schema
- Add IMAGEKIT_PRIVATE_KEY and IMAGEKIT_PUBLIC_KEY to server schema
- Update runtimeEnv mapping
- Add keys to .env.example template

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,10 @@ BETTER_AUTH_SECRET=""
 # Ensure redirect URI matches: ${NEXT_PUBLIC_APP_URL}/api/auth/callback/google
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+
+# -----------------------------------------------------------------------------
+# ImageKit (Storage)
+# -----------------------------------------------------------------------------
+# Get these from: https://imagekit.io/dashboard/developer/api-keys
+IMAGEKIT_PUBLIC_KEY="public_..."
+IMAGEKIT_PRIVATE_KEY="private_..."
